@@ -29,19 +29,18 @@ public class ConflictService {
     public List<ConflictDTO> getAllConflicts() {
         return conflictRepository.findAll().stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<ConflictDTO> getConflictsByStatus(ConflictStatus status) {
         return conflictRepository.findByStatus(status).stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ConflictDetailDTO getConflictById(Long id) {
         Conflict conflict = conflictRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException
-("Conflict not found with id: " + id));
+                .orElseThrow(() -> new NotFoundException("Conflict not found with id: " + id));
         return toDetailDTO(conflict);
     }
 
@@ -52,14 +51,11 @@ public class ConflictService {
         conflict.setStatus(createDTO.getStatus());
         conflict.setDescription(createDTO.getDescription());
 
-        if (createDTO.getCountryCodes() != null && !createDTO.getCountryCodes().isEmpty()) {
-            Set<Country> countries = new HashSet<>();
-            for (String code : createDTO.getCountryCodes()) {
-                Country country = countryRepository.findByCode(code)
-                        .orElseThrow(() -> new NotFoundException
-("Country not found with code: " + code));
-                countries.add(country);
-            }
+        if (createDTO.getCountryCodes() != null) {
+            Set<Country> countries = createDTO.getCountryCodes().stream()
+                    .map(code -> countryRepository.findByCode(code)
+                            .orElseThrow(() -> new NotFoundException("Country not found with code: " + code)))
+                    .collect(Collectors.toSet());
             conflict.setCountries(countries);
         }
 
@@ -69,8 +65,7 @@ public class ConflictService {
 
     public ConflictDTO updateConflict(Long id, ConflictCreateDTO updateDTO) {
         Conflict conflict = conflictRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException
-("Conflict not found with id: " + id));
+                .orElseThrow(() -> new NotFoundException("Conflict not found with id: " + id));
 
         conflict.setName(updateDTO.getName());
         conflict.setStartDate(updateDTO.getStartDate());
@@ -78,13 +73,10 @@ public class ConflictService {
         conflict.setDescription(updateDTO.getDescription());
 
         if (updateDTO.getCountryCodes() != null) {
-            Set<Country> countries = new HashSet<>();
-            for (String code : updateDTO.getCountryCodes()) {
-                Country country = countryRepository.findByCode(code)
-                        .orElseThrow(() -> new NotFoundException
-("Country not found with code: " + code));
-                countries.add(country);
-            }
+            Set<Country> countries = updateDTO.getCountryCodes().stream()
+                    .map(code -> countryRepository.findByCode(code)
+                            .orElseThrow(() -> new NotFoundException("Country not found with code: " + code)))
+                    .collect(Collectors.toSet());
             conflict.setCountries(countries);
         }
 
@@ -94,8 +86,7 @@ public class ConflictService {
 
     public void deleteConflict(Long id) {
         if (!conflictRepository.existsById(id)) {
-            throw new NotFoundException
-("Conflict not found with id: " + id);
+            throw new NotFoundException("Conflict not found with id: " + id);
         }
         conflictRepository.deleteById(id);
     }
@@ -103,15 +94,15 @@ public class ConflictService {
     public List<ConflictDTO> getConflictsByCountryCode(String countryCode) {
         return conflictRepository.findByCountryCode(countryCode).stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // Mapping methods
-
     private ConflictDTO toDTO(Conflict conflict) {
-        Set<String> countryCodes = conflict.getCountries().stream()
-                .map(Country::getCode)
-                .collect(Collectors.toSet());
+        Set<String> countryCodes =
+                safeSet(conflict.getCountries()).stream()
+                        .map(Country::getCode)
+                        .collect(Collectors.toSet());
+
         return new ConflictDTO(
                 conflict.getId(),
                 conflict.getName(),
@@ -123,32 +114,35 @@ public class ConflictService {
     }
 
     private ConflictDetailDTO toDetailDTO(Conflict conflict) {
-        Set<CountryDTO> countries = conflict.getCountries().stream()
-                .map(c -> new CountryDTO(c.getId(), c.getName(), c.getCode()))
-                .collect(Collectors.toSet());
+        Set<CountryDTO> countries =
+                safeSet(conflict.getCountries()).stream()
+                        .map(c -> new CountryDTO(c.getId(), c.getName(), c.getCode()))
+                        .collect(Collectors.toSet());
 
-        List<FactionDTO> factions = conflict.getFactions().stream()
-                .map(f -> new FactionDTO(
-                        f.getId(),
-                        f.getName(),
-                        conflict.getId(),
-                        conflict.getName(),
-                        f.getSupportingCountries().stream()
-                                .map(Country::getCode)
-                                .collect(Collectors.toSet())
-                ))
-                .collect(Collectors.toList());
+        List<FactionDTO> factions =
+                safeList(conflict.getFactions()).stream()
+                        .map(f -> new FactionDTO(
+                                f.getId(),
+                                f.getName(),
+                                conflict.getId(),
+                                conflict.getName(),
+                                safeSet(f.getSupportingCountries()).stream()
+                                        .map(Country::getCode)
+                                        .collect(Collectors.toSet())
+                        ))
+                        .toList();
 
-        List<EventDTO> events = conflict.getEvents().stream()
-                .map(e -> new EventDTO(
-                        e.getId(),
-                        e.getEventDate(),
-                        e.getLocation(),
-                        e.getDescription(),
-                        conflict.getId(),
-                        conflict.getName()
-                ))
-                .collect(Collectors.toList());
+        List<EventDTO> events =
+                safeList(conflict.getEvents()).stream()
+                        .map(e -> new EventDTO(
+                                e.getId(),
+                                e.getEventDate(),
+                                e.getLocation(),
+                                e.getDescription(),
+                                conflict.getId(),
+                                conflict.getName()
+                        ))
+                        .toList();
 
         return new ConflictDetailDTO(
                 conflict.getId(),
@@ -160,5 +154,13 @@ public class ConflictService {
                 factions,
                 events
         );
+    }
+
+    private <T> Set<T> safeSet(Set<T> set) {
+        return set == null ? Set.of() : set;
+    }
+
+    private <T> List<T> safeList(List<T> list) {
+        return list == null ? List.of() : list;
     }
 }
