@@ -13,7 +13,6 @@ import org.springframework.stereotype.Service;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -34,37 +33,34 @@ public class FactionService {
     public List<FactionDTO> getAllFactions() {
         return factionRepository.findAll().stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public FactionDTO getFactionById(Long id) {
         Faction faction = factionRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException
-("Faction not found with id: " + id));
+                .orElseThrow(() -> new NotFoundException("Faction not found with id: " + id));
         return toDTO(faction);
     }
 
     public List<FactionDTO> getFactionsByConflictId(Long conflictId) {
         return factionRepository.findByConflictId(conflictId).stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public FactionDTO createFaction(FactionCreateDTO createDTO) {
         Conflict conflict = conflictRepository.findById(createDTO.conflictId())
-                .orElseThrow(() -> new NotFoundException
-("Conflict not found with id: " + createDTO.conflictId()));
+                .orElseThrow(() -> new NotFoundException("Conflict not found with id: " + createDTO.conflictId()));
 
         Faction faction = new Faction();
         faction.setName(createDTO.name());
         faction.setConflict(conflict);
 
-        if (createDTO.supporterCountryCodes() != null && !createDTO.supporterCountryCodes().isEmpty()) {
+        if (createDTO.supporterCountryCodes() != null) {
             Set<Country> countries = new HashSet<>();
             for (String code : createDTO.supporterCountryCodes()) {
                 Country country = countryRepository.findByCode(code)
-                        .orElseThrow(() -> new NotFoundException
-("Country not found with code: " + code));
+                        .orElseThrow(() -> new NotFoundException("Country not found with code: " + code));
                 countries.add(country);
             }
             faction.setSupportingCountries(countries);
@@ -76,12 +72,10 @@ public class FactionService {
 
     public FactionDTO updateFaction(Long id, FactionCreateDTO updateDTO) {
         Faction faction = factionRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException
-("Faction not found with id: " + id));
+                .orElseThrow(() -> new NotFoundException("Faction not found with id: " + id));
 
         Conflict conflict = conflictRepository.findById(updateDTO.conflictId())
-                .orElseThrow(() -> new NotFoundException
-("Conflict not found with id: " + updateDTO.conflictId()));
+                .orElseThrow(() -> new NotFoundException("Conflict not found with id: " + updateDTO.conflictId()));
 
         faction.setName(updateDTO.name());
         faction.setConflict(conflict);
@@ -90,8 +84,7 @@ public class FactionService {
             Set<Country> countries = new HashSet<>();
             for (String code : updateDTO.supporterCountryCodes()) {
                 Country country = countryRepository.findByCode(code)
-                        .orElseThrow(() -> new NotFoundException
-("Country not found with code: " + code));
+                        .orElseThrow(() -> new NotFoundException("Country not found with code: " + code));
                 countries.add(country);
             }
             faction.setSupportingCountries(countries);
@@ -103,16 +96,18 @@ public class FactionService {
 
     public void deleteFaction(Long id) {
         if (!factionRepository.existsById(id)) {
-            throw new NotFoundException
-("Faction not found with id: " + id);
+            throw new NotFoundException("Faction not found with id: " + id);
         }
         factionRepository.deleteById(id);
     }
 
     private FactionDTO toDTO(Faction faction) {
-        Set<String> countryCodes = faction.getSupportingCountries().stream()
-                .map(Country::getCode)
-                .collect(Collectors.toSet());
+        Set<String> countryCodes =
+                faction.getSupportingCountries() == null
+                        ? Set.of()
+                        : faction.getSupportingCountries().stream()
+                        .map(Country::getCode)
+                        .collect(java.util.stream.Collectors.toSet());
 
         return new FactionDTO(
                 faction.getId(),
